--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "simplebackend.js",
   "devDependencies": {},
   "scripts": {
+    "demo":"node ./RequestDemo/index.js",
     "start":"node simplebackend.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
