--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7"
   },
   "name": "simpleexpressbackend",
   "version": "1.0.0",
   "main": "simplebackend.js",
-  "devDependencies": {},
   "scripts": {
-    "demo":"node ./RequestDemo/index.js",
-    "start":"node app.js",
+    "demo": "node ./RequestDemo/index.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
