--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "date-format": "^4.0.14",
     "express": "^4.21.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   },
   "name": "simpleexpressbackend",
